--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+2004-09-22  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/Makefile.am
+	* tools/pdbgen/pdb/context.pdb: new files that will hold context
+	related PDB functions.
+
+	* tools/pdbgen/groups.pl
+	* app/pdb/Makefile.am
+	* app/pdb/context_cmds.c
+	* app/pdb/internal_procs.c
+	* app/pdb/progress_cmds.c
+	* libgimp/gimp_pdb.h
+	* libgimp/gimpcontext_pdb.[ch]: (re)generated.
+
+	* app/plug-in/Makefile.am
+	* app/plug-in/plug-in-context.[ch]: new files that will hold code
+	that implements a context stack in the plug-in's proc-frame.
+
+	* app/plug-in/plug-in.[ch]: new function plug_in_get_proc_frame().
+
+	* app/plug-in/plug-in-message.c
+	* app/plug-in/plug-in-progress.c: use the new function instead of
+	duplicating it all over the place.
+
 2004-09-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/Makefile.am
