--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-09-22  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/siod-wrapper.c
+	* plug-ins/script-fu/scripts/mkbrush.scm
+	* plug-ins/script-fu/scripts/select-to-brush.scm
+	* plug-ins/script-fu/scripts/select-to-pattern.scm: applied a
+	patch from Kevin Cozens that adds constants for the directory
+	names exposed by libgimpbase. Fixes bug #153327.
+
+2004-09-22  Sven Neumann  <sven@gimp.org>
+
 	Converted the first bunch of Script-Fu to the new context API:
 
 	* plug-ins/script-fu/scripts/[3a-c]*.scm: push and pop a context.
