2004-09-22  Sven Neumann  <sven@gimp.org>
	* app/actions/view-actions.c (view_zoom_actions): mark menu label
	as translatable (bug #153456).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14810 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-22  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/view-actions.c (view_zoom_actions): mark menu label
+	as translatable (bug #153456).
+
+2004-09-22  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/siod-wrapper.c
 	* plug-ins/script-fu/scripts/mkbrush.scm
 	* plug-ins/script-fu/scripts/select-to-brush.scm
