--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/bumpmap.c (bumpmap_dialog): cosmetics.
+
 2004-09-22  Kevin Turner  <acapnotic@twistedmatrix.com>
 
 	* plug-ins/pygimp/gimpfu.py (register): clean up errors in
