2004-09-23  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/context.pdb: added accessors for the context's
	brush, pattern, gradient, palette and brush. Deprecation of old
	functions will follow. Fixes gimp-context-set-background wrapper.
	Cleanup.

	* tools/pdbgen/pdb/patterns.pdb
	* libgimp/gimpbrushes.h: minor fixes.

	* app/pdb/context_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/patterns_cmds.c
	* libgimp/gimpcontext_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14816 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-09-23  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/context.pdb: added accessors for the context's
+	brush, pattern, gradient, palette and brush. Deprecation of old
+	functions will follow. Fixes gimp-context-set-background wrapper.
+	Cleanup.
+
+	* tools/pdbgen/pdb/patterns.pdb
+	* libgimp/gimpbrushes.h: minor fixes.
+
+	* app/pdb/context_cmds.c
+	* app/pdb/internal_procs.c
+	* app/pdb/patterns_cmds.c
+	* libgimp/gimpcontext_pdb.[ch]: regenerated.
+
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/bumpmap.c (bumpmap_dialog): cosmetics.
