--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
+	* tools/pdbgen/pdb/context.pdb: oops, should probably pop, not
+	push a context in gimp_context_pop().
+
+	* app/pdb/context_cmds.c: regenerated.
+
+	* plug-ins/script-fu/scripts/mkbrush.scm: don't fiddle with the
+	brush description, simply use the name choosen by the user.
+
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
 	Converted the next bunch of scripts to the new context API:
 
 	* plug-ins/script-fu/scripts/[d-n]*.scm: push and pop a context.
