--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
+	Converted more scripts to the new context API:
+
+	* plug-ins/script-fu/scripts/glossy.scm
+	* plug-ins/script-fu/scripts/hsv-graph.scm
+	* plug-ins/script-fu/scripts/image-structure.scm
+	* plug-ins/script-fu/scripts/perspective-shadow.scm
+	* plug-ins/script-fu/scripts/pupi-button.scm
+	* plug-ins/script-fu/scripts/rendermap.scm
+	* plug-ins/script-fu/scripts/ripply-anim.scm
+
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/hsv-graph.scm: 
+
 	* tools/pdbgen/pdb/context.pdb: oops, should probably pop, not
 	push a context in gimp_context_pop().
 
