2004-09-23  Sven Neumann  <sven@gimp.org>
	Converted the last bunch of scripts to the new context API:

	* plug-ins/script-fu/scripts/[s-z]*.scm


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14821 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
+	Converted the last bunch of scripts to the new context API:
+
+	* plug-ins/script-fu/scripts/[s-z]*.scm
+
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
 	Converted more scripts to the new context API:
 
 	* plug-ins/script-fu/scripts/glossy.scm
