2004-09-23  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/bumpmap.c (bumpmap_dialog): added a GtkPaned for
	packing preview and controls so the controls are resizable again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14823 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-23  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/common/bumpmap.c (bumpmap_dialog): added a GtkPaned for
+	packing preview and controls so the controls are resizable again.
+
+2004-09-23  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/script-fu/scripts/3d-outline.scm
 	* plug-ins/script-fu/scripts/beveled-pattern-arrow.scm
 	* plug-ins/script-fu/scripts/beveled-pattern-bullet.scm
