2004-09-23  Sven Neumann  <sven@gimp.org>
	* libgimp/libgimp-docs.sgml
	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpbrushes.sgml
	* libgimp/tmpl/gimpcontext.sgml
	* libgimp/tmpl/gimppalettes.sgml
	* libgimp/tmpl/gimppatterns.sgml: updated for new context API.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14825 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-docs.sgml
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpbrushes.sgml
+	* libgimp/tmpl/gimpcontext.sgml
+	* libgimp/tmpl/gimppalettes.sgml
+	* libgimp/tmpl/gimppatterns.sgml: updated for new context API.
+
 2004-09-20  Michael Natterer  <mitch@gimp.org>
 
 	* app/Makefile.am (GTKDOC_LIBS): removed same linker hacks
