* en_CA.po: Updated Canadian English translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14827 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-23  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-09-13  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILE.in: dialog sources were moved to app/dialogs/.
