--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,15 @@
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in
+	* de.po: updated.
+
 2004-09-23  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
 
 2004-09-13  Michael Natterer  <mitch@gimp.org>
 
-	* POTFILE.in: dialog sources were moved to app/dialogs/.
+	* POTFILES.in: dialog sources were moved to app/dialogs/.
 
 2004-09-06  Adam Weinberger  <adamw@gnome.org>
 
