--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-enums.h
+	* plug-ins/script-fu/script-fu-interface.c
+	* plug-ins/script-fu/script-fu-scripts.c
+	* plug-ins/script-fu/siod-wrapper.c: applied a patch by Kevin
+	Cozens, based on a patch by Dov Grobgeld. Implements multi-line
+	text input in Script-Fu (bug #124394).
+
+	* plug-ins/script-fu/scripts/test-sphere.scm: test the new SF-TEXT
+	parameter.
+
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimppixbuf.c (gimp_drawable_get_thumbnail,
 	gimp_image_get_thumbnail): use the exported symbols from
 	libgimp, not the private _gimp_drawable_thumbnail()
