--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scripts/blended-logo.scm: fixed context
+	push/pop.
+
+2004-09-23  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-enums.h
 	* plug-ins/script-fu/script-fu-interface.c
 	* plug-ins/script-fu/script-fu-scripts.c
