--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2004-09-23  Michael Natterer  <mitch@gimp.org>
+
+	* app/dialogs/Makefile.am
+	* app/dialogs/color-dialog.[ch]: removed...
+
+	* app/widgets/Makefile.am
+	* app/widgets/widgets-types.h
+	* app/widgets/gimpcolordialog.[ch]: ...and added as widget.
+
+	* app/core/gimpmarshal.list: new marshaller VOID__BOXED_ENUM.
+
+	* app/widgets/widgets-enums.[ch]: new enum GimpColorDialogState.
+
+	* app/widgets/gimpcolormapeditor.[ch]
+	* app/widgets/gimpcolorpanel.[ch]
+	* app/widgets/gimpgradienteditor.[ch]
+	* app/widgets/gimppaletteeditor.[ch]
+	* app/widgets/gimptoolbox-color-area.c
+	* app/actions/gradient-editor-commands.c
+	* app/actions/view-commands.c: ported to GimpColorDialog. Removes
+	a whole bunch of ugly widgets/ -> dialogs/ dependencies.
+
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-interface.c: put the text view into
@@ -48,7 +70,7 @@
 	* tools/pdbgen/pdb/gradients.pdb
 	* tools/pdbgen/pdb/palettes.pdb
 	* tools/pdbgen/pdb/patterns.pdb: removed the foos_set_foo()
-	procedures and marked the foos_set_foo() ones as deprecated. For
+	procedures and marked the foos_get_foo() ones as deprecated. For
 	brushes, patterns and palettes, added foos_get_foo_info()
 	procedures which work like foos_get_foo_data() but return just the
 	properties, not the actual data. Allow NULL or "" to be passed
