2004-09-23  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: dialogs/color-dialog.c -> widgets/gimpcolordialog.c


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14833 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-23  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: dialogs/color-dialog.c -> widgets/gimpcolordialog.c
+
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in
