Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14834 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-23  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+	
 2004-09-23  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: dialogs/color-dialog.c -> widgets/gimpcolordialog.c
