2004-09-24  Sven Neumann  <sven@gimp.org>
	* app/plug-in/plug-in-message.c: removed a linebreak from a
	warning message.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14839 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-24  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/plug-in-message.c: removed a linebreak from a
+	warning message.
+
 2004-09-24  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimpairbrushoptions.c
