2004-09-24  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpimagemaptool.c
	(gimp_image_map_tool_settings_dialog): set the folder using
	gtk_file_chooser_set_current_folder(), not set_filename().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14842 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-24  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpimagemaptool.c
+	(gimp_image_map_tool_settings_dialog): set the folder using
+	gtk_file_chooser_set_current_folder(), not set_filename().
+
 2004-09-24  Sven Neumann  <sven@gimp.org>
 
 	* app/base/curves.[ch]
