2004-09-24  Sven Neumann  <sven@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14844 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-24  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt: updated.
+
 2004-09-23  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-docs.sgml
