--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-24  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated.
+
 2004-09-23  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
