2004-09-24  Sven Neumann  <sven@gimp.org>
	* app/config/gimprc-blurbs.h (LAYER_PREVIEW_SIZE_BLURB): try to
	improve the tooltip for the layer-preview-size gimprc setting.
	Addresses bug #153603.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14850 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-24  Sven Neumann  <sven@gimp.org>
+
+	* app/config/gimprc-blurbs.h (LAYER_PREVIEW_SIZE_BLURB): try to
+	improve the tooltip for the layer-preview-size gimprc setting.
+	Addresses bug #153603.
+
 2004-09-24  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-undo-push.c (undo_pop_fs_to_layer): factored
