--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-25  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/oilify.c: Added a preview and made some small
+	cleanups.
+
 2004-09-24  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimprc-blurbs.h (LAYER_PREVIEW_SIZE_BLURB): try to
