* plug-ins/common/dog.c: made the preview behave like in all other plug-ins   by using a GimpDrawablePreview.  This allowed to remove a bunch of   complicated code.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14856 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-25  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/dog.c: made the preview behave like in all other
+	plug-ins by using a GimpDrawablePreview.  This allowed to remove a
+	bunch of complicated code.
+
 2004-09-25  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimptemplateeditor.[ch]: added resolution and image
