2004-09-25  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcolormapeditor.c: moved stuff from
	gimp_colormap_editor_new() to
	gimp_colormap_editor_init(). Untabified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14857 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpcolormapeditor.c: moved stuff from
+	gimp_colormap_editor_new() to
+	gimp_colormap_editor_init(). Untabified.
+
 2004-09-25  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/dog.c: made the preview behave like in all other
