2004-09-25  Michael Natterer  <mitch@gimp.org>
	* app/core/gimppickable.[ch]: added new vitrual function
	GimpPickableInterface::get_image()

	* app/core/gimpdrawable.c
	* app/core/gimpimagemap.c
	* app/core/gimpprojection.[ch]: implement it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14860 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-09-25  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimppickable.[ch]: added new vitrual function
+	GimpPickableInterface::get_image()
+
+	* app/core/gimpdrawable.c
+	* app/core/gimpimagemap.c
+	* app/core/gimpprojection.[ch]: implement it.
+
+2004-09-25  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpcolormapeditor.[ch]
 	* app/widgets/gimphistogrameditor.[ch]
 	* app/widgets/gimpselectioneditor.[ch]: removed redundant "gimage"
