--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-25  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/engrave.c: Added a preview and #if'ed out some
+	unreachable code.
+
 2004-09-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimppickable.[ch]: added new vitrual function
