--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-09-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpimage-qmask.h: added comment about not changing the
+	silly "Qmask" string because it is used to identify the Quick Mask
+	in the XCF.
+
+	* app/core/gimpchannel.c: implement GimpViewable::get_description()
+	and return "Quick Mask" if it's the Quick Mask.
+
+	* app/actions/qmask-actions.c
+	* app/actions/qmask-commands.c
+	* app/core/core-enums.[ch]
+	* app/core/gimpimage-qmask.c
+	* app/display/gimpdisplayshell.c: s/QuickMask/Quick Mask/.
+
 2004-09-25  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/engrave.c: Added a preview and #if'ed out some
