--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-25  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpviewrenderer.h: removed trailing whitespace.
+
+2004-09-25  Sven Neumann  <sven@gimp.org>
+
 	* app/display/gimpdisplayshell-close.c: changed mnemonic so that
 	you can close an image w/o saving it by using Ctrl-W Alt-W.
 
