--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-25  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_stock.c: removed C++ style comment.
+
 2004-09-25  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/imagemap/imap_stock.[ch]
